[package]
name = "arc"
version = "0.1.0"
description = "s3gw - Assisted Release Command"
authors = ["Joao Eduardo Luis <joao@suse.com>"]
license = "Apache-2.0"
repository = ""
default-run = "arc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.8", features = ["derive"] }
env_logger = "0.10.0"
git2 = "0.17.2"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
indicatif = { version = "0.17.5", features = ["tokio"] }
inquire = { version = "0.6.2", features = ["console", "chrono", "date", "macros"], default-features = false }
log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_debug", "max_level_trace"] }
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tabled = "0.12.2"
tokio = { version = "1.28.2", features = ["full"] }
